Fixing social mobile z-index for smaller phones again...

--- a/src/styles/mobile.less
+++ b/src/styles/mobile.less
@@ -782,12 +782,12 @@
                     opacity: 1;
                 }
                 ~ .options {
-                    margin-left: 10px;
+                    margin-left: 1vw;
                     // display: block;
                     width: ~'calc((35px + 12px) * 4)';
                     .bubble {
                         .transform(scale(1.1));
-                        margin: 0 6px;
+                        margin: 0 1vw;
 
                         @from : 1;
                         @to : 4;
